--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,11 +29,6 @@
       "Frontend/*": ["*"]
     }
   },
-  "include": [
-    "frontend/**/*",
-    "types.d.ts"
-  ],
-  "exclude": [
-    "frontend/generated/jar-resources/**"
-  ]
+  "include": ["frontend/**/*", "types.d.ts"],
+  "exclude": ["frontend/generated/jar-resources/**"]
 }
